@@ -31,6 +31,8 @@ Released: N/A
   * Added lovec.exe in Windows. It is the same as love.exe but built with the Console subsystem, so it always uses or provides a console.
   * Added 'shaderswitches' field to the table returned by love.graphics.getStats.
   * Added Quad:getTextureDimensions.
+  * Added PrismaticJoint:getAxis and WheelJoint:getAxis.
+  * Added 2-point version of love.physics.newRevoluteJoint.
 
   * Fixed love on iOS 6.
   * Fixed os.execute always returning -1 on Linux.
@@ -44,6 +46,8 @@ Released: N/A
   * Fixed the default shader improperly applying gamma correction to per-vertex colors when gamma correction is requested but not supported on OpenGL ES.
   * Fixed text coloring breaking because of an empty string.
   * Fixed large burst of particles when dramatically increasing the emission rate of a ParticleSystem.
+  * Fixed MouseJoint:getBodies unconditionally erroring.
+  * Fixed memory leak in Text:set.
 
   * Improved performance of Channel methods by roughly 2x in many cases.
   
